Add mobile product layout and payment integrations

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -6,5 +6,9 @@
     "Andreani",
     "Correo Argentino",
     "OCA"
-  ]
+  ],
+  "mercadoPagoToken": "",
+  "afipCUIT": "",
+  "afipCert": "",
+  "afipKey": ""
 }
