chore: format project with Prettier

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -2,11 +2,7 @@
   "googleAnalyticsId": "",
   "metaPixelId": "",
   "whatsappNumber": "541112345678",
-  "defaultCarriers": [
-    "Andreani",
-    "Correo Argentino",
-    "OCA"
-  ],
+  "defaultCarriers": ["Andreani", "Correo Argentino", "OCA"],
   "mercadoPagoToken": "",
   "afipCUIT": "",
   "afipCert": "",
