feat: basic multi-step checkout

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -6,5 +6,7 @@
   "mercadoPagoToken": "",
   "afipCUIT": "",
   "afipCert": "",
-  "afipKey": ""
+  "afipKey": "",
+  "resendApiKey": "",
+  "publicUrl": ""
 }
