Remove hard-coded Mercado Pago tokens

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ package-lock.json
 nerin_final_updated/node_modules/
 nerin_final_updated/package-lock.json
 nerin_final_updated/.env
+frontend/config.js
