--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -3,7 +3,7 @@
   "metaPixelId": "",
   "whatsappNumber": "541112345678",
   "defaultCarriers": ["Andreani", "Correo Argentino", "OCA"],
-  "mercadoPagoToken": "APP_USR-5675865330226860-072710-05605f8b5a52891c1de581e371307e87-462376008",
+  "mercadoPagoToken": "",
   "afipCUIT": "",
   "afipCert": "",
   "afipKey": "",
