--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "afip.ts": "^3.2.2",
     "mercadopago": "^2.8.0",
-    "resend": "^4.7.0"
+    "resend": "^4.7.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "prettier": "^3.6.2"
