--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "mercadopago": "^2.8.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3"
   }
 }
