Add admin link test

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "backend/server.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "test": "node tests/admin-link.test.js"
   },
   "dependencies": {
     "express": "^4.18.2",
