--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "joi": "^17.10.1",
     "mercadopago": "^2.8.0",
     "pg": "^8.11.3",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "nodemailer": "^6.9.11"
   },
   "devDependencies": {
     "jest": "^30.0.5",
