--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MP_ACCESS_TOKEN=APP_USR-5675865330226860-072710-05605f8b5a52891c1de581e371307e87-462376008
 MP_CLIENT_ID=5675865330226860
 MP_CLIENT_SECRET=YRiGmJzvPj2gfDZlikazXwWsD7W9E2Co
-PUBLIC_URL=http://localhost:10000
+PUBLIC_URL=https://nerinparts.com.ar
 MP_WEBHOOK_URL=http://localhost:10000/api/mercado-pago/webhook
