--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 node_modules/
 package-lock.json
+nerin_final_updated/node_modules/
+nerin_final_updated/package-lock.json
+nerin_final_updated/.env
 frontend/config.js
