--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -10,9 +10,21 @@
     "afip.ts": "^3.2.2",
     "mercadopago": "^2.8.0",
     "resend": "^4.7.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
+    "helmet": "^7.0.0",
+    "joi": "^17.10.1",
+    "pg": "^8.11.3",
+    "winston": "^3.10.0",
+    "nodemailer": "^6.9.11",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
   }
 }
