--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -2,9 +2,9 @@
   "name": "nerin",
   "version": "1.0.0",
   "description": "Sistema ERP + E‑commerce para NERIN Repuestos",
-  "main": "backend/server.js",
+  "main": "backend/index.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/index.js"
   },
   "dependencies": {
     "afip.ts": "^3.2.2",
