--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -2,9 +2,9 @@
   "name": "nerin",
   "version": "1.0.0",
   "description": "Sistema ERP + E‑commerce para NERIN Repuestos",
-  "main": "backend/server.js",
+  "main": "backend/index.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/index.js"
   },
   "dependencies": {
     "afip.ts": "^3.2.2",
@@ -14,7 +14,8 @@
     "joi": "^17.12.0",
     "mercadopago": "^2.8.0",
     "multer": "^1.4.5-lts.1",
-    "resend": "^4.7.0"
+    "resend": "^4.7.0",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2"
