--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -4,7 +4,9 @@
   "description": "Sistema ERP + E‑commerce para NERIN Repuestos",
   "main": "backend/index.js",
   "scripts": {
-    "start": "node backend/index.js"
+    "start": "node backend/index.js",
+    "migrate": "node backend/db/migrate.js",
+    "seed": "node backend/db/seed-from-json.js"
   },
   "dependencies": {
     "afip.ts": "^3.2.2",
