--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node backend/index.js",
     "migrate": "node backend/db/migrate.js",
-    "seed": "node backend/db/seed-from-json.js"
+    "seed": "node backend/db/seed-from-json.js",
+    "wipe": "node backend/db/wipe.js"
   },
   "dependencies": {
     "afip.ts": "^3.2.2",
