--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "nerin",
+  "name": "nerin-erp-ecommerce",
   "version": "1.0.0",
-  "description": "Sistema ERP + E‑commerce para NERIN Repuestos",
-  "main": "backend/index.js",
+  "private": true,
+  "engines": { "node": ">=18" },
   "scripts": {
-    "start": "node backend/index.js",
-    "migrate": "node backend/db/migrate.js",
-    "seed": "node backend/db/seed-from-json.js",
-    "wipe": "node backend/db/wipe.js",
-    "db:setup": "npm run migrate && npm run seed",
-    "db:reset": "npm run wipe && npm run seed"
+    "start": "node backend/server.js"
   },
   "dependencies": {
-    "afip.ts": "^3.2.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "joi": "^17.12.0",
-    "mercadopago": "^2.8.0",
+    "afip.ts": "^4.0.0",
+    "dotenv": "^16.4.5",
+    "mercadopago": "^2.2.10",
     "multer": "^1.4.5-lts.1",
-    "resend": "^4.7.0",
-    "pg": "^8.13.0"
-  },
-  "devDependencies": {
-    "prettier": "^3.6.2"
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.5",
+    "resend": "^3.2.0"
   }
 }
