fix: pin afip.ts and set node engine

--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -2,12 +2,13 @@
   "name": "nerin-erp-ecommerce",
   "version": "1.0.0",
   "private": true,
-  "engines": { "node": ">=18" },
+  "engines": { "node": "20.x" },
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "test": "node -e \"console.log('ok')\""
   },
   "dependencies": {
-    "afip.ts": "^4.0.0",
+    "afip.ts": "^3.2.2",
     "dotenv": "^16.4.5",
     "mercadopago": "^2.2.10",
     "multer": "^1.4.5-lts.1",
