--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -4,7 +4,8 @@
   "description": "Sistema ERP + E‑commerce para NERIN Repuestos",
   "main": "backend/index.js",
   "scripts": {
-    "start": "node backend/index.js"
+    "start": "node backend/index.js",
+    "cleanup": "node backend/scripts/cleanup.js"
   },
   "dependencies": {
     "afip.ts": "^3.2.2",
@@ -13,9 +14,11 @@
     "express": "^4.19.2",
     "joi": "^17.12.0",
     "mercadopago": "^2.8.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "resend": "^4.7.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "rotating-file-stream": "^3.0.3",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2"
