chore: drop QA screenshots

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ package-lock.json
 nerin_final_updated/node_modules/
 nerin_final_updated/package-lock.json
 nerin_final_updated/.env
+nerin_final_updated/qa/
 frontend/config.js
