--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -8,6 +8,9 @@
     "cleanup": "node backend/scripts/cleanup.js",
     "verify:overrides": "node backend/scripts/verifyOverrides.js",
     "verify:mp-webhook": "node backend/scripts/mp_webhook_probe.js",
+    "verify:mp-prod": "node backend/scripts/mp_webhook_probe.js",
+    "mp:replay": "node backend/scripts/mp_replay.js",
+    "mp:self-probe": "node backend/scripts/mp_self_probe.js",
     "device:qa": "node scripts/device-qa.js"
   },
   "dependencies": {
