--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -16,7 +16,8 @@
     "mercadopago": "^2.8.0",
     "multer": "^1.4.5-lts.1",
     "resend": "^4.7.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
