--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -8,6 +8,6 @@
   "afipCert": "",
   "afipKey": "",
   "resendApiKey": "",
-  "publicUrl": "",
+  "publicUrl": "https://nerinparts.com.ar",
   "apiBase": ""
 }
