Add email dependencies and env example

--- a/nerin_final_updated/.env.example
+++ b/nerin_final_updated/.env.example
@@ -1,3 +1,3 @@
-MP_ACCESS_TOKEN=
-RESEND_API_KEY=
-PUBLIC_URL=http://localhost:3000
+RESEND_API_KEY=change_me
+FROM_EMAIL="NERIN <ventas@send.nerinparts.com.ar>"
+SUPPORT_EMAIL=soporte@nerinparts.com.ar
