--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.4",
     "afip.ts": "^3.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -15,13 +16,13 @@
     "joi": "^17.12.0",
     "mercadopago": "^2.8.0",
     "multer": "^1.4.5-lts.1",
-    "resend": "^4.7.0",
     "pg": "^8.13.0",
+    "resend": "^4.7.0",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
     "jest": "^30.0.5",
+    "prettier": "^3.6.2",
     "supertest": "^7.1.4"
   }
 }
