Documentar configuración de emails con Resend

--- a/nerin_final_updated/.env.example
+++ b/nerin_final_updated/.env.example
@@ -1,3 +1,6 @@
+# API key de Resend para enviar emails transaccionales
 RESEND_API_KEY=change_me
+# Dirección del remitente verificada en Resend (formato Nombre <email>)
 FROM_EMAIL="NERIN <ventas@send.nerinparts.com.ar>"
+# Correo que recibirá consultas de soporte
 SUPPORT_EMAIL=soporte@nerinparts.com.ar
