Protect test-email route in production

--- a/nerin_final_updated/.env.example
+++ b/nerin_final_updated/.env.example
@@ -4,3 +4,5 @@ RESEND_API_KEY=change_me
 FROM_EMAIL="NERIN <ventas@send.nerinparts.com.ar>"
 # Correo que recibirá consultas de soporte
 SUPPORT_EMAIL=soporte@nerinparts.com.ar
+# Clave para habilitar el endpoint /test-email en producción
+ENV_TEST_KEY=
