Use API_BASE_URL for Mercado Pago webhooks

--- a/nerin_final_updated/.env.example
+++ b/nerin_final_updated/.env.example
@@ -6,3 +6,5 @@ FROM_EMAIL="NERIN <ventas@send.nerinparts.com.ar>"
 SUPPORT_EMAIL=soporte@nerinparts.com.ar
 # Clave para habilitar el endpoint /test-email en producción
 ENV_TEST_KEY=
+# URL base pública de la API (ej: https://api.nerinparts.com.ar)
+API_BASE_URL=https://api.nerinparts.com.ar
