chore: update backend env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,20 @@
+# Mercado Pago access token for API authentication
 MP_ACCESS_TOKEN=APP_USR-5675865330226860-072710-05605f8b5a52891c1de581e371307e87-462376008
+# Mercado Pago application client ID
 MP_CLIENT_ID=5675865330226860
+# Mercado Pago application client secret
 MP_CLIENT_SECRET=YRiGmJzvPj2gfDZlikazXwWsD7W9E2Co
+# Frontend base URL used in backend configuration
 PUBLIC_URL=http://localhost:3000
+# URL for Mercado Pago webhook endpoint
 MP_WEBHOOK_URL=http://localhost:3000/api/mercado-pago/webhook
+# API key for Resend email service
+RESEND_API_KEY=
+# Default sender email address for transactional emails
+FROM_EMAIL="NERIN <ventas@send.nerinparts.com.ar>"
+# Contact email for user support inquiries
+SUPPORT_EMAIL=soporte@nerinparts.com.ar
+# Production API base URL for external requests
+API_BASE_URL=https://api.nerinparts.com.ar
+# Placeholder key for testing environment configuration
+ENV_TEST_KEY=
