--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,7 +9,7 @@ PUBLIC_URL=http://localhost:3000
 # URL for Mercado Pago webhook endpoint
 MP_WEBHOOK_URL=http://localhost:3000/api/mercado-pago/webhook
 # API key for Resend email service
-RESEND_API_KEY=
+RESEND_API_KEY=re_aWESaa1R_GCwe1vRht7SjmAbrs73ALCca
 # Default sender email address for transactional emails
 FROM_EMAIL="NERIN <ventas@send.nerinparts.com.ar>"
 # Contact email for user support inquiries
