feat: centralize resend email configuration

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -8,6 +8,7 @@
   "afipCert": "",
   "afipKey": "",
   "resendApiKey": "",
+  "supportEmail": "",
   "publicUrl": "https://nerinparts.com.ar",
   "apiBase": ""
 }
