Add internal email alert for new wholesale requests

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -9,6 +9,7 @@
   "afipKey": "",
   "resendApiKey": "",
   "supportEmail": "",
+  "wholesaleNotificationEmails": [],
   "publicUrl": "https://nerinparts.com.ar",
   "apiBase": ""
 }
