--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mercadopago": "^2.8.0",
     "pg": "^8.11.3",
     "winston": "^3.10.0",
-    "nodemailer": "^6.9.11"
+    "nodemailer": "^6.9.11",
+    "@prisma/client": "^5.21.1"
   },
   "devDependencies": {
     "jest": "^30.0.5",
