--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "joi": "^17.12.0",
     "mercadopago": "^2.8.0",
     "multer": "^1.4.5-lts.1",
