--- a/nerin_final_updated/package.json
+++ b/nerin_final_updated/package.json
@@ -12,6 +12,7 @@
     "afip.ts": "^3.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "decimal.js": "^10.4.3",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
     "joi": "^17.12.0",
@@ -19,7 +20,9 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "resend": "^4.7.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "yaml": "^2.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "jest": "^30.0.5",
