--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -8,7 +8,8 @@
   "afipCert": "",
   "afipKey": "",
   "resendApiKey": "",
-  "supportEmail": "",
+  "supportEmail": "soporte@nerinparts.com.ar",
+  "fromEmailContacto": "NERIN Soporte <soporte@nerinparts.com.ar>",
   "wholesaleNotificationEmails": [],
   "publicUrl": "https://nerinparts.com.ar",
   "apiBase": "",
