--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.11"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.14",
     "jest": "^30.0.5",
     "supertest": "^7.1.4"
   }
