Improve SEO, legal content, and Meta feed tracking

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -10,6 +10,13 @@
   "resendApiKey": "",
   "supportEmail": "soporte@nerinparts.com.ar",
   "fromEmailContacto": "NERIN Soporte <soporte@nerinparts.com.ar>",
+  "contacto_email": "soporte@nerinparts.com.ar",
+  "whatsapp_url": "https://wa.me/541112345678",
+  "whatsapp_numero": "541112345678",
+  "direccion_comercial": "Paseo Colón 545, Ciudad Autónoma de Buenos Aires, Argentina.",
+  "horarios": "Lunes a viernes de 9:00 a 18:00.",
+  "plazos_envio": "Despachamos en 24 a 48 hs hábiles a todo el país.",
+  "politica_garantia_resumen": "Garantía técnica de 6 meses por defectos de fábrica. La cobertura aplica a módulos probados sin pegado.",
   "wholesaleNotificationEmails": [],
   "publicUrl": "https://nerinparts.com.ar",
   "apiBase": "",
