Update Meta Pixel ID

--- a/nerin_final_updated/data/config.json
+++ b/nerin_final_updated/data/config.json
@@ -1,6 +1,6 @@
 {
   "googleAnalyticsId": "",
-  "metaPixelId": "",
+  "metaPixelId": "863660223219277",
   "whatsappNumber": "541112345678",
   "defaultCarriers": ["Andreani", "Correo Argentino", "OCA"],
   "mercadoPagoToken": "",
